--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,15 @@ services:
   # janus-gateway
   #
   janus-gateway:
-    image: 'canyan/janus-gateway:0.9.2'
+    image: 'canyan/janus-gateway:latest'
     command: ["/usr/local/bin/janus", "-F", "/usr/local/etc/janus"]
     ports:
       - "8188:8188"
+      - "8088:8088"
+      - "8889:8889"
+      - "8000:8000"
+      - "7088:7088"
+      - "7089:7089"
     volumes:
-      - "./.conf/janus/janus.jcfg:/usr/local/etc/janus/janus.jcfg"
-      - "./.conf/janus/janus.eventhandler.sampleevh.jcfg:/usr/local/etc/janus/janus.eventhandler.sampleevh.jcfg"
+      - "./.conf/janus/janus.plugin.audiobridge.jcfg:/usr/local/etc/janus/janus.plugin.audiobridge.jcfg"
     restart: always
