--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -21,9 +21,12 @@ jobs:
       - name: Build with Maven
         run: mvn install
 
-      - name: Deploy to Staging server
-        uses: easingthemes/ssh-deploy@v2.0.7
-        env:
-          SSH_PRIVATE_KEY: ${{ secrets.DEPLOY_SSH }}
-          REMOTE_HOST: ${{ secrets.DEPLOY_IP }}
-          REMOTE_USER: ${{ secrets.DEPLOY_USER }}
+      - name: copy file via ssh password
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.DEPLOY_IP }}
+          username: ${{ secrets.DEPLOY_USER }}
+          key: ${{ secrets.DEPLOY_SSH }}
+          rm: true
+          target: "/home/azureuser"
+          source: "target/"
