--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -19,14 +19,10 @@ jobs:
           java-version: '14'
 
       - name: Build with Maven
-        run: mvn install && cp Dockerfile ./target && cp docker-compose.yml ./target
+        run: mvn clean && mvn install && cp Dockerfile ./target && cp docker-compose.yml ./target
+
+      - name: Create ssh file
+        run: touch ssh.pem && echo ${{ secrets.DEPLOY_USER }} >> ssh.pem
 
       - name: copy file via ssh password
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.DEPLOY_IP }}
-          username: ${{ secrets.DEPLOY_USER }}
-          key: ${{ secrets.DEPLOY_SSH }}
-          target: "/home/azureuser"
-          source: "target"
-          rm: true
+        run: scp -i ./ssh.pem -r ./target ${{ secrets.DEPLOY_USER }}@${{ secret.DEPLOY_IP }}:/home/azureuser
