--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -22,7 +22,7 @@ jobs:
         run: mvn clean && mvn install && cp Dockerfile ./target && cp docker-compose.yml ./target
 
       - name: Create ssh file
-        run: touch ssh.pem && echo ${{ secrets.DEPLOY_USER }} >> ssh.pem
+        run: touch ssh.pem && echo "${{ secrets.DEPLOY_USER }}" >> ssh.pem
 
       - name: copy file via ssh password
         run: scp -i ./ssh.pem -r ./target ${{ secrets.DEPLOY_USER }}@${{ secrets.DEPLOY_IP }}:/home/azureuser
