--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -24,5 +24,11 @@ jobs:
       - name: Create ssh file
         run: touch ssh.pem && echo ${{ secrets.DEPLOY_SSH }} >> ssh.pem
 
-      - name: copy file via ssh password
-        run: scp -i ./ssh.pem -r ./target ${{ secrets.DEPLOY_USER }}@${{ secrets.DEPLOY_IP }}:/home/azureuser
+      - name: Copy single file to remote
+        uses: garygrossgarten/github-action-scp@release
+        with:
+          local: target
+          remote: home/azureuser
+          host: ${{ secrets.DEPLOY_IP }}
+          username: ${{ secrets.DEPLOY_USER }}
+          privateKey: ${{ secrets.DEPLOY_SSH }}
