--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -19,7 +19,10 @@ jobs:
           java-version: '14'
 
       - name: Build with Maven
-        run: mvn clean && mvn install && cp Dockerfile ./target && cp docker-compose.yml ./target && cp -r conf target && cp -r cert target
+        run: mvn clean && mvn install
+
+      - name: Copy neded files
+        run: cp Dockerfile ./target && cp docker-compose.yml ./target && cp -r conf target && cp -r cert target
 
       - name: Copy single file to remote
         uses: garygrossgarten/github-action-scp@release
