--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -22,7 +22,7 @@ jobs:
         run: mvn clean && mvn install
 
       - name: Copy neded files
-        run: cp Dockerfile ./target && cp docker-compose.yml ./target && cp -r conf target && cp -r cert target
+        run: cp Dockerfile ./target && cp docker-compose.yml ./target && cp -r conf target
 
       - name: Copy single file to remote
         uses: garygrossgarten/github-action-scp@release
