--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,3 +21,12 @@ services:
       - janus-gateway
     ports:
       - "8080:8080"
+
+  proxy:
+    image: nginx
+    volumes:
+      - "./conf/nginx/nginx.conf:/etc/nginx/nginx.conf:ro"
+    ports:
+      - "9090:9090"
+    environment:
+      - NGINX_PORT=9090
