--- a/data/conf/nginx/nginx.conf
+++ b/data/conf/nginx/nginx.conf
@@ -21,5 +21,18 @@ http {
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection $connection_upgrade;
     }
+
+    location /.well-known/acme-challenge/ {
+      root /var/www/certbot;
+    }
+  }
+
+  server {
+    listen 443 ssl;
+    server_name example.org;
+
+    location /http/ {
+      proxy_pass http://52.188.70.66:8080;
+    }
   }
 }
