--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,8 @@ services:
       - "7088:7088"
       - "7089:7089"
     volumes:
-      - "./conf/janus/janus.jcfg:/usr/local/etc/janus/janus.jcfg"
-      - "./conf/janus/janus.plugin.audiobridge.jcfg:/usr/local/etc/janus/janus.plugin.audiobridge.jcfg"
+      - "./data/conf/janus/janus.jcfg:/usr/local/etc/janus/janus.jcfg"
+      - "./data/conf/janus/janus.plugin.audiobridge.jcfg:/usr/local/etc/janus/janus.plugin.audiobridge.jcfg"
     restart: always
 
   app:
@@ -25,8 +25,17 @@ services:
   proxy:
     image: nginx
     volumes:
-      - "./conf/nginx/nginx.conf:/etc/nginx/nginx.conf:ro"
+      - "./data/conf/nginx/nginx.conf:/etc/nginx/nginx.conf:ro"
+      - "./data/certbot/conf:/etc/letsencrypt"
+      - "./data/certbot/www:/var/www/certbot"
     ports:
       - "9090:9090"
-    environment:
-      - NGINX_PORT=9090
+      - "443:443"
+#    environment:
+#      - NGINX_PORT=9090
+
+  certbot:
+    image: certbot/certbot
+    volumes:
+      - "./data/certbot/conf:/etc/letsencrypt"
+      - "./data/certbot/www:/var/www/certbot"
