--- a/data/conf/nginx/nginx.conf
+++ b/data/conf/nginx/nginx.conf
@@ -29,10 +29,20 @@ http {
 
   server {
     listen 443 ssl;
-    server_name example.org;
+    server_name ssl-server.org;
+
+    ssl_certificate /etc/letsencrypt/live/ssl-server.org/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/ssl-server.org/privkey.pem;
 
     location /http/ {
       proxy_pass http://52.188.70.66:8080;
+    }
+
+    location /ws/ {
+      proxy_pass http://52.188.70.66:8188;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection $connection_upgrade;
     }
   }
 }
