--- a/data/conf/nginx/nginx.conf
+++ b/data/conf/nginx/nginx.conf
@@ -23,16 +23,17 @@ http {
     }
 
     location /.well-known/acme-challenge/ {
+      allow all;
       root /var/www/certbot;
     }
   }
 
   server {
     listen 443 ssl;
-    server_name ssl-server.org;
+    server_name example.org;
 
-    ssl_certificate /etc/letsencrypt/live/ssl-server.org/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/ssl-server.org/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/example.org/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/example.org/privkey.pem;
 
     location /http/ {
       proxy_pass http://52.188.70.66:8080;
