--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -21,11 +21,8 @@ jobs:
       - name: Build with Maven
         run: mvn clean && mvn install
 
-      - name: Add SSL
-        run: chmod +x init-letsencrypt.sh && ./init-letsencrypt.sh
-
       - name: Copy neded files
-        run: cp Dockerfile ./target && cp docker-compose.yml ./target && cp -r data target
+        run: cp Dockerfile ./target && cp docker-compose.yml ./target && cp -r data target && cp init-letsencrypt.sh target
 
       - name: Copy single file to remote
         uses: garygrossgarten/github-action-scp@release
