--- a/data/conf/nginx/nginx.conf
+++ b/data/conf/nginx/nginx.conf
@@ -30,10 +30,10 @@ http {
 
   server {
     listen 8443 ssl;
-    server_name example.org;
+    server_name ${FQDN};
 
-    ssl_certificate /etc/letsencrypt/live/example.org/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/example.org/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/${FQDN}/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/${FQDN}/privkey.pem;
 
     location /http/ {
       proxy_pass http://52.188.70.66:8080;
