--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,20 +22,37 @@ services:
     ports:
       - "8080:8080"
 
-  proxy:
-    image: nginx
+  frontend:
+    restart: unless-stopped
+    image: staticfloat/nginx-certbot
+    ports:
+      - 9090:9090/tcp
+      - 443:443/tcp
+    environment:
+      CERTBOT_EMAIL: step.ponomarev@gmail.com
+      # variable names are space-separated
+      ENVSUBST_VARS: FQDN
+      FQDN: example.com
     volumes:
       - "./data/conf/nginx/nginx.conf:/etc/nginx/nginx.conf:ro"
       - "./data/certbot/conf:/etc/letsencrypt"
-      - "./data/certbot/www:/var/www/certbot"
-    ports:
-      - "9090:9090"
-      - "8443:8443"
-    depends_on:
-      - certbot
+  volumes:
+    letsencrypt:
 
-  certbot:
-    image: certbot/certbot
-    volumes:
-      - "./data/certbot/conf:/etc/letsencrypt"
-      - "./data/certbot/www:/var/www/certbot"
+#  proxy:
+#    image: nginx
+#    volumes:
+#      - "./data/conf/nginx/nginx.conf:/etc/nginx/nginx.conf:ro"
+#      - "./data/certbot/conf:/etc/letsencrypt"
+#      - "./data/certbot/www:/var/www/certbot"
+#    ports:
+#      - "9090:9090"
+#      - "8443:8443"
+#    depends_on:
+#      - certbot
+#
+#  certbot:
+#    image: certbot/certbot
+#    volumes:
+#      - "./data/certbot/conf:/etc/letsencrypt"
+#      - "./data/certbot/www:/var/www/certbot"
