--- a/data/conf/nginx/nginx.conf
+++ b/data/conf/nginx/nginx.conf
@@ -29,11 +29,11 @@ http {
   }
 
   server {
-    listen 8443 ssl;
-    server_name ${FQDN};
+    listen 443 ssl;
+    server_name example.com;
 
-    ssl_certificate /etc/letsencrypt/live/${FQDN}/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/${FQDN}/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/example.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem;
 
     location /http/ {
       proxy_pass http://52.188.70.66:8080;
