--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,16 +26,13 @@ services:
     image: nginx
     volumes:
       - "./data/conf/nginx/nginx.conf:/etc/nginx/nginx.conf:ro"
-      - "./data/certbot/conf:/etc/letsencrypt"
-      - "./data/certbot/www:/var/www/certbot"
     ports:
       - "9090:9090"
-      - "443:443"
     depends_on:
       - certbot
 
-  certbot:
-    image: certbot/certbot
-    volumes:
-      - "./data/certbot/conf:/etc/letsencrypt"
-      - "./data/certbot/www:/var/www/certbot"
+#  certbot:
+#    image: certbot/certbot
+#    volumes:
+#      - "./data/certbot/conf:/etc/letsencrypt"
+#      - "./data/certbot/www:/var/www/certbot"
