--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,9 +22,9 @@ services:
     ports:
       - "8080:8080"
 
-  proxy:
-    image: nginx
-    volumes:
-      - "./data/conf/nginx/nginx.conf:/etc/nginx/nginx.conf:ro"
-    ports:
-      - "9090:9090"
+#  proxy:
+#    image: nginx
+#    volumes:
+#      - "./data/conf/nginx/nginx.conf:/etc/nginx/nginx.conf:ro"
+#    ports:
+#      - "9090:9090"
