--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -18,17 +18,17 @@ jobs:
         with:
           java-version: '14'
 
-      - name: Build with Maven
-        run: mvn clean && mvn install
-
-      - name: Copy neded files
-        run: cp Dockerfile ./target && cp docker-compose.yml ./target && cp -r data target && cp init-letsencrypt.sh target
-
-      - name: Copy single file to remote
-        uses: garygrossgarten/github-action-scp@release
-        with:
-          local: target
-          remote: home/azureuser/app
-          host: ${{ secrets.DEPLOY_IP }}
-          username: ${{ secrets.DEPLOY_USER }}
-          privateKey: ${{ secrets.DEPLOY_SSH }}
+#      - name: Build with Maven
+#        run: mvn clean && mvn install
+#
+#      - name: Copy neded files
+#        run: cp Dockerfile ./target && cp docker-compose.yml ./target && cp -r data target && cp init-letsencrypt.sh target
+#
+#      - name: Copy single file to remote
+#        uses: garygrossgarten/github-action-scp@release
+#        with:
+#          local: target
+#          remote: home/azureuser/app
+#          host: ${{ secrets.DEPLOY_IP }}
+#          username: ${{ secrets.DEPLOY_USER }}
+#          privateKey: ${{ secrets.DEPLOY_SSH }}
